# FioBot

./: .env.example  .gitignore  README.md  gh_deploy_key  gh_deploy_key.pub  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
fio_bot/plugins/bili_video/: __init__.py  config.py
fio_bot/plugins/help/: __init__.py
fio_bot/plugins/mrfz/: __init__.py  config.py  game_data.py  ocr.py  recruit.py  render.py
fio_bot/plugins/randomfio/: __init__.py  config.py
fio_bot/plugins/rollanything/: __init__.py
fio_bot/plugins/skland/: __init__.py  api.py  config.py  storage.py
fio_bot/plugins/xhs_pic/: __init__.py  config.py
